--- a/hibernate-example/src/main/resources/application.properties
+++ b/hibernate-example/src/main/resources/application.properties
@@ -1,5 +1,14 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.driverClassName=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://localhost:3306/hibernate_example
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/test_db
+
+#spring.datasource.driverClassName=org.mariadb.jdbc.Driver
+#spring.datasource.url=jdbc:mariadb://localhost:3306/hibernate_example
+#spring.datasource.username=hibernate
+#spring.datasource.password=1234
+
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:file:../../h2
 spring.datasource.username=hibernate
 spring.datasource.password=1234
