--- a/hibernate-example/pom.xml
+++ b/hibernate-example/pom.xml
@@ -50,6 +50,11 @@
             <groupId>org.mariadb.jdbc</groupId>
             <artifactId>mariadb-java-client</artifactId>
         </dependency>
+        
+        <dependency>
+            <groupId>com.h2database</groupId>
+		    <artifactId>h2</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
